# latte-compiler

./: .gitignore  Makefile  README.md  latc  latc_llvm  latte.cabal  stack.yaml  test.sh
docs/: Latte.cf  LatteCPP.cf  latte.html  projekt_zaliczeniowy.html
lib/: Makefile  runtime.bc  runtime.ll
src/: AbsLatte.hs  Environment.hs  Latte.cf  LexLatte.hs  MainLatte.hs  Makefile  ParLatte.hs  StaticChecker.hs
src/Frontend/: Environment.hs  StaticChecker.hs
src/Generator/: Environment.hs  Generator.hs
src/Parser/: AbsInstant.hi  ErrM.hi  LexInstant.hi  ParInstant.hi
src/bnfc/: .gitignore  AbsLatte.hs  DocLatte.txt  LexLatte.hs  LexLatte.x  Makefile  ParLatte.hs  ParLatte.y  PrintLatte.hs  SkelLatte.hs
test/: test.sh
test/bad/my/: no-main.lat
