name:                latte
version:             0.1.0.0
-- synopsis:
-- description:
license:             AllRightsReserved
author:              Przemysław Kuczyński
maintainer:          p.kuczynski@student.uw.edu.pl
-- copyright:
-- category:

build-type:          Simple

extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable latte
  main-is:             MainLatte.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, ExtendedDefaultRules, CPP, MagicHash
  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, filepath >=1.4 && <1.5, process >=1.4 && <1.5, mtl >=2.2 && <2.3, containers >=0.5 && <0.6, array >=0.5 && <0.6
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
